RabbitMQRequestReply support any exchange type (topic, fanout, x-local-random)